@@ -3,3 +3,7 @@
 ## New Features
 
 - add new discord RPC feature -- kaneryu on 2025-07-27
+
+## Bugfixes
+
+- add ability for downloader to retry downloading song if chunking doesn't work -- kaneryu on 2025-07-27
